force-app/main/default/objects/UserID_ERP__c/UserID_ERP__c.object-meta.xml
<CustomObject>
    <description>A user&apos;s actual or old ID code in ERP system. List of particular user&apos;s IDs is used for integration purposes, because user&apos;s ID in ERP system can change on occasions.</description>
    <label>User ID in ERP</label>
    <nameField>
        <label>User ID in ERP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User IDs in ERP</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>