force-app/main/default/objects/UserID_ERP__c/listViews/All_User_IDs_in_ERP.listView-meta.xml
<ListView>
    <fullName>All_User_IDs_in_ERP</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All User IDs in ERP</label>
</ListView>